--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=jgennari-2023-devsecops-example
-sonar.organization=jgennari
+sonar.projectKey=baverbae_lg24devsecops
+sonar.organization=baverbae
 sonar.python.coverage.reportPaths=./coverage.xml
 sonar.sources=owm/
 sonar.tests=tests/
